fix shrinking on smaller devices

--- a/app/javascript/style/video/_canvas.scss
+++ b/app/javascript/style/video/_canvas.scss
@@ -1,6 +1,8 @@
 @use "../utils/breakpoints" as *;
 
 #video-show {
+  width: 100%;
+
   .primary-video-area {
     // This is required to ensure that the controls can be shown over this area
     position: relative;
